[package]
name = "cloudwatch_emf_helper"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Adithya Kolla"]
description = "Library for publishing Cloud metrics in EMF specification"
readme = "README.md"
repository= "https://github.com/KollaAdithya/CloudWatchEMFHelper"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
